[gd_scene load_steps=51 format=2]

[ext_resource path="res://art/zombies/Zombie_Free/Walk/0002.png" type="Texture" id=1]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0001.png" type="Texture" id=2]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0005.png" type="Texture" id=3]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0003.png" type="Texture" id=4]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0007.png" type="Texture" id=5]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0011.png" type="Texture" id=6]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0010.png" type="Texture" id=7]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0014.png" type="Texture" id=8]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0006.png" type="Texture" id=9]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0004.png" type="Texture" id=10]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0009.png" type="Texture" id=11]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0013.png" type="Texture" id=12]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0012.png" type="Texture" id=13]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0015.png" type="Texture" id=14]
[ext_resource path="res://art/zombies/Zombie_Free/Walk/0008.png" type="Texture" id=15]
[ext_resource path="res://Zombie.gd" type="Script" id=16]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0462.png" type="Texture" id=17]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0136.png" type="Texture" id=18]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0141.png" type="Texture" id=19]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0137.png" type="Texture" id=20]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0134.png" type="Texture" id=21]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0466.png" type="Texture" id=22]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0468.png" type="Texture" id=23]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0465.png" type="Texture" id=24]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0132.png" type="Texture" id=25]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0463.png" type="Texture" id=26]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0149.png" type="Texture" id=27]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0131.png" type="Texture" id=28]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0146.png" type="Texture" id=29]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0469.png" type="Texture" id=30]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0148.png" type="Texture" id=31]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0464.png" type="Texture" id=32]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0470.png" type="Texture" id=33]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0133.png" type="Texture" id=34]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0138.png" type="Texture" id=35]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0147.png" type="Texture" id=36]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0467.png" type="Texture" id=37]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0144.png" type="Texture" id=38]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0145.png" type="Texture" id=39]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0142.png" type="Texture" id=40]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0139.png" type="Texture" id=41]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0130.png" type="Texture" id=42]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0143.png" type="Texture" id=43]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0150.png" type="Texture" id=44]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0461.png" type="Texture" id=45]
[ext_resource path="res://art/zombies/Zombie_Free/Attack/0460.png" type="Texture" id=46]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0140.png" type="Texture" id=47]
[ext_resource path="res://art/zombies/Zombie_Free/Death/0135.png" type="Texture" id=48]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 45 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 37 ), ExtResource( 23 ), ExtResource( 30 ), ExtResource( 33 ) ],
"loop": true,
"name": "attack",
"speed": 14.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 21 ), ExtResource( 48 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 47 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 44 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 45 )

[node name="Zombie" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, -0.500002 )
scale = Vector2( 3.1, 4.65 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -25.0
margin_top = -53.0
margin_right = 25.0
margin_bottom = -48.0
color = Color( 0, 0.0627451, 1, 1 )

[connection signal="body_entered" from="." to="." method="_on_Zombie_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Zombie_body_shape_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
